--- a/src/app/account/profile/profile.component.scss
+++ b/src/app/account/profile/profile.component.scss
@@ -1,6 +1,10 @@
 .card{
     margin:10px auto;
     width: 70%;
+    .div{
+        display: inline;
+        
+    }
 }
 
 .card-body{
@@ -24,4 +28,4 @@
 
 .mat-mdc-form-field + .mat-mdc-form-field {
     margin-left: 8px;
-  }
+}
