--- a/src/app/account/profile/profile.component.html
+++ b/src/app/account/profile/profile.component.html
@@ -79,20 +79,37 @@
                             <mat-panel-title>
                               Description
                             </mat-panel-title>
-                            
                           </mat-expansion-panel-header>
-                        <form class="add-form" [formGroup]="valueForm" (ngSubmit)="UpdateData()">
-                            <mat-form-field appearance="outline">
-                              <input matInput 
+                          <a style="float: right; cursor:pointer" (click)="formDisplay=false"
+                          *ngIf="user.description; else elseBlock"
+                          >Edit Description</a>
+                          <ng-template #elseBlock>
+                            <a style="float: right; cursor:pointer" (click)="formDisplay=false"
+                            >Add Description</a>
+                          </ng-template>
+                          <p class="my-4" [hidden]="!formDisplay">{{user.description}}</p>
+                          <form class="add-form" 
+                                [formGroup]="valueForm1" 
+                                (ngSubmit)="UpdateData()" 
+                                [hidden]="formDisplay"
+                              >
+                              <div class="row_form">
+                              <mat-form-field appearance="outline" style=" width: 100%;">                                
+                                <textarea matInput
+              
                                     type="text" 
                                     name="description" 
                                     formControlName="description"
                                     placeholder="Please tell us about any hobbies, additional expertise, or anything else you'd like to add." 
                                     value="{{user.description}}">
+                                  </textarea>
                             </mat-form-field>
-                            <input type="submit" value="Save" class="btn">
+
+                              </div>
+
+                            <input type="submit" value="Save" class="btn" (click)="formDisplay=true">
                           </form>
-                          
+
                         </mat-expansion-panel>
                        
                       
@@ -107,24 +124,43 @@
                               </mat-panel-title>
                             </mat-expansion-panel-header>
 
-                            <!-- <li *ngFor="let user of user.languages">{{ user.language }}</li> -->
+                            <a style="float: right; cursor:pointer" (click)="displayFormAdd()"
+                            >Add New</a>
+                            <mat-list *ngFor="let lang of user.languages ">
+                              <mat-list-item>{{ lang.name }} 
+                                <span class="text-muted">{{ lang.level }}</span>
+                                <i class="bi bi-pencil" style="cursor: pointer; margin: 10px " (click)="displayFormEdit(lang._id)"> </i>
+                                <i class="bi bi-trash3" style="cursor: pointer; margin: 10px " (click)="deleteLanguage(lang._id)"></i>
+                                
+                              </mat-list-item>
+        
+                              <mat-divider></mat-divider>
+                            </mat-list>
 
-                            <form class="add-form" (ngSubmit)="UpdateData()">
+                            <form class="add-form" 
+                                  [formGroup]="valueForm2" 
+                                  (ngSubmit)="operationLang ? addLang() : updateLanguage()"
+                                  *ngIf="!formDisplay1"
+                                  >
                               <mat-form-field appearance="outline">
                                 <input matInput 
                                       type="text" 
                                       name="data" 
-                                      placeholder="Add a language" >
+                                      formControlName="name"
+                                      placeholder="Add a language" 
+                                      value ="operationLang ? '' : 'hey' "
+                                     >
                               </mat-form-field>
                               <mat-form-field appearance="outline">
-                                  <mat-label>Level</mat-label>
-                                  <mat-select>
-                                    <mat-option *ngFor="let opt of user.languages" [value]="opt.level">
-                                      {{opt.level}}
-                                    </mat-option>
-                                  </mat-select>
-                                </mat-form-field>
-                              <input type="submit" value="Save" class="btn">
+                                <mat-label>Level</mat-label>
+                                <select matNativeControl formControlName="level" >
+                                  <option value="basic">Basic</option>
+                                  <option value="conversational">Conversational</option>
+                                  <option value="fluent">Fluent</option>
+                                  <option value="bilingual">Bilingual</option>
+                                </select>
+                              </mat-form-field>
+                              <input type="submit" [value]="operationLang ? add : update " class="btn" >
                             </form>
                           </mat-expansion-panel>
                           
@@ -138,16 +174,42 @@
                             </mat-panel-title>
                             
                           </mat-expansion-panel-header>
-                          <form class="add-form" (ngSubmit)="UpdateData()">
+                          <a style="float: right; cursor:pointer" (click)="displayFormAdd()"
+                            >Add New</a>
+                          <mat-list *ngFor="let lang of user.languages ">
+                            <mat-list-item>{{ lang.name }} 
+                              <span class="text-muted">{{ lang.level }}</span>
+                              <i class="bi bi-pencil" style="cursor: pointer; margin: 10px " (click)="displayFormEdit(lang._id)"> </i>
+                              <i class="bi bi-trash3" style="cursor: pointer; margin: 10px " (click)="deleteLanguage(lang._id)"></i>
+                              
+                            </mat-list-item>
+      
+                            <mat-divider></mat-divider>
+                          </mat-list>
+
+                          <form class="add-form" 
+                                [formGroup]="valueForm3" 
+                                (ngSubmit)="operationLang ? addLang() : updateLanguage()"
+                                *ngIf="!formDisplay"
+                                >
                             <mat-form-field appearance="outline">
                               <input matInput 
                                     type="text" 
                                     name="data" 
-                                    placeholder="Add a skill" 
-                                    value="{{user.description}}">
+                                    formControlName="name"
+                                    placeholder="Add skill" 
+                                    [value] ="operationLang ? '' : 'hey' "
+                                   >
                             </mat-form-field>
-                            <input type="submit" value="Save" class="btn">
-
+                            <mat-form-field appearance="outline">
+                              <mat-label>Level</mat-label>
+                              <select matNativeControl formControlName="level" >
+                                <option value="beginner">Beginner</option>
+                                <option value="intermediate">Intermediate</option>
+                                <option value="expert">Expert</option>
+                              </select>
+                            </mat-form-field>
+                            <input type="submit" [value]="operationLang ? add : update " class="btn" >
                           </form>
                         </mat-expansion-panel>
                        
@@ -161,10 +223,70 @@
                           </mat-panel-title>
                           
                         </mat-expansion-panel-header>
-                        <mat-form-field appearance="fill">
-                          <mat-label>Input</mat-label>
-                          <input matInput value={{user.email}}>
-                        </mat-form-field>
+                        <a style="float: right; cursor:pointer" (click)="displayFormAdd()"
+                            >Add New</a>
+                          <mat-list *ngFor="let lang of user.languages ">
+                            <mat-list-item>{{ lang.name }} 
+                              <span class="text-muted">{{ lang.level }}</span>
+                              <i class="bi bi-pencil" style="cursor: pointer; margin: 10px " (click)="displayFormEdit(lang._id)"> </i>
+                              <i class="bi bi-trash3" style="cursor: pointer; margin: 10px " (click)="deleteLanguage(lang._id)"></i>
+                              
+                            </mat-list-item>
+      
+                            <mat-divider></mat-divider>
+                          </mat-list>
+
+                          <form class="add-form" 
+                                [formGroup]="valueForm3" 
+                                (ngSubmit)="operationLang ? addLang() : updateLanguage()"
+                                *ngIf="!formDisplay1"
+                                >
+                            <mat-form-field appearance="outline">
+                              <input matInput 
+                                    type="text" 
+                                    name="data" 
+                                    formControlName="country"
+                                    placeholder="Country of college/university" 
+                                    [value] ="operationLang ? '' : 'hey' "
+                                   >
+                            </mat-form-field>
+                            <mat-form-field appearance="outline">
+                              <input matInput 
+                                    type="text" 
+                                    name="data" 
+                                    formControlName="country"
+                                    placeholder="College/university name" 
+                                    [value] ="operationLang ? '' : 'hey' "
+                                   >
+                            </mat-form-field>
+                            <table class="example-full-width" cellspacing="0"><tr>
+                              <td>
+                                <mat-form-field appearance="outline">
+                                  <mat-label>Title</mat-label>
+                                  <select matNativeControl formControlName="level" >
+                                    <option value="baccalaureate">Baccalaureate</option>
+                                    <option value="deust">DEUST</option>
+                                    <option value="licence">Licence</option>
+                                    <option value="master">Master</option>
+                                    <option value="doctorat">Doctorat</option>
+                                  </select>
+                                </mat-form-field>
+                              </td>
+                              <td>
+                                <mat-form-field appearance="outline">
+                                  <input matInput 
+                                        type="text" 
+                                        name="data" 
+                                        formControlName="country"
+                                        placeholder="Major" 
+                                        [value] ="operationLang ? '' : 'hey' "
+                                       >
+                                </mat-form-field>
+                              </td>
+                            </tr></table>
+                            
+                            <input type="submit" [value]="operationLang ? add : update " class="btn" >
+                          </form>
                       </mat-expansion-panel>
                      
                   
