--- a/src/app/account/dashboard/gig/gig-add/gig-add.component.scss
+++ b/src/app/account/dashboard/gig/gig-add/gig-add.component.scss
@@ -32,3 +32,26 @@
 .example-sidenav {
   padding: 20px;
 }
+.example-form mat-slide-toggle {
+  margin: 8px 0;
+  display: block;
+}
+
+.example-action-buttons {
+  padding-bottom: 20px;
+}
+
+.example-headers-align .mat-expansion-panel-header-description {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.example-headers-align .mat-mdc-form-field + .mat-mdc-form-field {
+  margin-left: 8px;
+}
+
+.example-button-container {
+  display: flex;
+  justify-content: center;
+  width: 120px;
+}
