--- a/src/app/account/dashboard/gig/gig-add/gig-add.component.html
+++ b/src/app/account/dashboard/gig/gig-add/gig-add.component.html
@@ -5,9 +5,14 @@
           <!-- <button mat-raised-button (click)="isLinear = !isLinear" id="toggle-linear">
               {{!isLinear ? 'Enable linear mode' : 'Disable linear mode'}}
             </button> -->
+
+
+
+                       <!-- =================================== FORM 1============================================ -->
+           <!-- ====================================================================================== -->
             <mat-stepper [linear]="isLinear" #stepper orientation="vertical">
               <mat-step [stepControl]="firstFormGroup">
-                 <form [formGroup]="firstFormGroup">
+                 <form  [formGroup]="firstFormGroup" (submit)="setData()" >
                      <ng-template matStepLabel>Overview</ng-template>
                             <mat-card>
                                <mat-card-content>
@@ -15,8 +20,9 @@
                                  <mat-card-subtitle>As your Gig storefront, your title is the most important place to include keywords that buyers would likely use to search for a service like yours.</mat-card-subtitle>
                                   <div class="row_form">                          
                                      <mat-form-field appearance="fill" class="example-full-width">
-                                      <mat-label>Textarea</mat-label>
-                                      <textarea matInput></textarea>
+                                      <mat-label >Gig title</mat-label>
+                                      <textarea matInput value="test" formControlName="gigtitle" #message maxlength="100"></textarea>
+                                      <mat-hint align="end">{{message.value.length}} / 100</mat-hint>
                                      </mat-form-field>
                                   </div>
                                                <hr>                     
@@ -25,22 +31,22 @@
                                    <div class="row_form">
                                        <mat-form-field appearance="outline" class="example-full-width">
                                         <mat-label>SELECT CATEGORY</mat-label>
-                                          <mat-select>
-                                           <mat-option value="one">First option</mat-option>
-                                              <mat-option value="two">Second option</mat-option>
+                                          <mat-select formControlName="category" [(ngModel)]="value" name="value" (ngModelChange)="getOnecategory(value)">
+                                              <mat-option *ngFor="let cat of categoryTable" value ={{cat._id}}>{{cat.name}}</mat-option>
+                                              
                                           </mat-select>
                                         </mat-form-field>
+                                        <!-- {{value}} -->
 
                         <mat-form-field appearance="outline" class="example-full-width">
                           <mat-label>SELECT SUBCATEGORY</mat-label>
-                        <mat-select>
-                      <mat-option value="one">First option</mat-option>
-                      <mat-option value="two">Second option</mat-option>
+                        <mat-select formControlName="subCategory" >
+                      <mat-option *ngFor="let subCat of subCategoryTable" value ={{subCat._id}}>{{subCat.name}}</mat-option>
                         </mat-select>
                         </mat-form-field>
- </div> 
+                      </div> 
 
- <hr>
+                            <hr>
 
                        <mat-card-title>Positive keywords</mat-card-title>
                        <mat-card-subtitle>Enter search terms you feel your buyers will use when looking for your service</mat-card-subtitle>
@@ -66,37 +72,37 @@
                                        [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
                                        [matChipInputAddOnBlur]="addOnBlur"
                                        (matChipInputTokenEnd)="add($event)"
-                                       formControlName="firstCtrl" required
+                                       formControlName="keywords" required
                                        
                                        />
                               </mat-chip-grid>
                             </mat-form-field>
 
                       </div>
-               
-
-
                       </mat-card-content>
                     </mat-card>
-
-                  
-
-                  <div>
-                    <button mat-button matStepperNext>Next</button>
+                  <div style="  display: flex ;   justify-content: end;">
+                    <button mat-raised-button style="background-color:#4361ee; color :white;" type="submit" matStepperNext class="mt-3" align="end">Next Step</button>
                   </div>
                 </form>
 
               </mat-step>
+           <!-- =================================== FORM 2============================================ -->
+           <!-- ====================================================================================== -->
               <h4>Pricing</h4>
               <mat-step [stepControl]="secondFormGroup" label="Pricing">
-                <form [formGroup]="secondFormGroup">
+                <form>
                   <mat-card>
                       <div class="alert alert-primary mt-4" role="alert">
                           The scope of this service is to deliver buyers a functional website. Package prices should include predefined options at a minimum of $80 or they are very likely to receive less exposure in this category. Please move your Gig to another category if you do not offer this specific service.
 
                         </div>
-                      <mat-card-content>
 
+
+                      <mat-card-content>
+                        <mat-slide-toggle [(ngModel)]="isChecked" name="toggle" >Offer packages
+                        </mat-slide-toggle>
+                             <!-- <button mat-button (click)="activePackage()">active</button> -->
                             <mat-tab-group>
 
 
@@ -105,12 +111,10 @@
 
 
                                   <div class="row_form">                          
-                               
                                       <mat-form-field appearance="fill" class="example-full-width">
                                         <mat-label>Name your package</mat-label>
                                         <input matInput>
                                       </mat-form-field>
-            
                                  </div>
 
                                  <div class="row_form">                                
@@ -138,8 +142,7 @@
 
 
                               </mat-tab>
-                              <mat-tab label="STANDARD" disabled="false"> 
-
+                              <mat-tab label="STANDARD"  [disabled]="!isChecked"> 
 
                                   <div class="row_form">                          
                                
@@ -172,7 +175,7 @@
 
                               </div>
                               </mat-tab>
-                              <mat-tab label="PREMIUM"  disabled="false" >
+                              <mat-tab label="PREMIUM"  [disabled]="!isChecked" >
                                   <div class="row_form">                          
                                
                                       <mat-form-field appearance="fill" class="example-full-width">
@@ -204,43 +207,104 @@
                               </div>
                               </mat-tab>
                             </mat-tab-group>
-                             
+
+                           
                               
 
                       </mat-card-content>
+                      
                     </mat-card>
+                   
 
                   <div>
-                    <button mat-button matStepperPrevious>Back</button>
-                    <button mat-button matStepperNext>Next</button>
+                    <button mat-button matStepperPrevious class="mt-3" align="end">Back</button>
+                    <button mat-button matStepperNext class="mt-3" align="end">Next</button>
                   </div>
                 </form>
+
               </mat-step>
             
-              <mat-step>
+           <!-- =================================== FORM 3============================================ -->
+           <!-- ====================================================================================== -->
+
+              <mat-step [stepControl]="FormGroup3">
+                <form  [formGroup]="FormGroup3" (submit)="setFAQvalue()" >
                   <ng-template matStepLabel>Description & FAQ</ng-template>
                      <h4 class="mt-4">Description</h4>
                      <p>Briefly Describe Your Gig</p>
                      <hr>
-                  <angular-editor formControlName="htmlContent" [config]="editorConfig"></angular-editor>
+                  <angular-editor  [config]="editorConfig" formControlName="htmlContent" ></angular-editor>
+                    <hr class="mt-5 mb-4">
 
+                                                 
+                             <div >
+                               <button style="float: right; background-color:#4361ee; color :white;" mat-raised-button  (click)="addFAQElement()">Add FAQ</button>
+                               <mat-card-title class="mb-4">Frequently Asked Questions</mat-card-title>
+                             </div>
 
+                    <!-- <mat-accordion class=" mt-5" multi *ngFor="let faq of faqs"> -->
+                          
+                      <mat-accordion class=" mt-5">
+        
+                      <mat-expansion-panel class="mt-3">
+                        <mat-expansion-panel-header>
+                          <mat-panel-title>
+                         1   :    Question And Response 
+                          </mat-panel-title>
+                          <mat-panel-description>
+                            FAQ
+                            <span class="cdk-visually-hidden">
+
+                              <mat-icon matBadge="15" matBadgeColor="warn">home</mat-icon>
+
+                            </span>
+                            <mat-icon>help_outline</mat-icon>
+                          </mat-panel-description>
+                        </mat-expansion-panel-header>
+
+                       <div class="row_form">
+                        <mat-form-field appearance="fill" style="width: 100%;">
+                          <mat-label>Question</mat-label>
+                          <input matInput formControlName="questionfaq">
+                                                
+                        </mat-form-field>
+                    
+                        <mat-form-field appearance="fill" style="width: 100%;">
+                          <mat-label>Response</mat-label>
+                          <input matInput formControlName="responsefaq">
+                        </mat-form-field>
+                       </div>
+
+                       <div class="row_form">
+
+                       </div>
+
+                    
+
+                      </mat-expansion-panel>
+  
+                      <mat-divider></mat-divider>
+  
+                      </mat-accordion>
 
                   <div>
-                      <button mat-button matStepperNext>Next</button>
+                      <button mat-button matStepperNext submit>Next</button>
 
                   </div>
+                </form>
                 </mat-step>
+                <!-- ========================================================================= -->
 
 
 
               <mat-step>
 
-                <ng-template matStepLabel>Done</ng-template>
+                <ng-template matStepLabel>Save the gig</ng-template>
                 <p>You are now done.</p>
                 <div>
-                  <button mat-button matStepperPrevious>Back</button>
-                  <button mat-button (click)="stepper.reset()">Reset</button>
+                  <button mat-button matStepperPrevious>Save</button>
+                  <!-- <button mat-button matStepperPrevious>Back</button>
+                  <button mat-button (click)="stepper.reset()">Reset</button> -->
                 </div>
               </mat-step>
             </mat-stepper>
