--- a/src/app/account/dashboard/gig/gig-list/gig-list.component.html
+++ b/src/app/account/dashboard/gig/gig-list/gig-list.component.html
@@ -21,25 +21,25 @@
     <!-- Position Column -->
     <ng-container matColumnDef="position">
       <th mat-header-cell *matHeaderCellDef> Gig </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <td mat-cell *matCellDef="let element">0 </td>
     </ng-container>
   
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Clicks </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.gittitle}} </td>
     </ng-container>
   
     <!-- Weight Column -->
     <ng-container matColumnDef="weight">
       <th mat-header-cell *matHeaderCellDef> ORDERS </th>
-      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
     </ng-container>
   
     <!-- Symbol Column -->
     <ng-container matColumnDef="symbol">
       <th mat-header-cell *matHeaderCellDef> Operation </th>
-      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.status}} </td>
     </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -47,3 +47,10 @@
         (click)="selection.toggle(row)">
     </tr>
   </table>
+
+
+  <div *ngFor="let gig of gigTable">
+     <tr>{{gig.gittitle }}</tr>
+     <tr>{{gig.description }}</tr>
+     <tr>{{gig.status }}</tr>
+  </div>
