--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,11 +11,16 @@ html, body {
   height: 100%; 
   font-family: 'Open Sans', sans-serif;
 }
-
+$baseColor : #4361ee;
 a{
   font-family: 'Open Sans', sans-serif;
   text-decoration: none;
   margin-right: 20px;
   font-size: 16px;
   color: #5f5f5f;
+}
+a:hover{
+  transition: 0.3s;
+  color: $baseColor;
+  cursor: pointer;
 }
